--- a/rustlings/day3.html
+++ b/rustlings/day3.html
@@ -176,7 +176,240 @@
 
                 <div id="content" class="content">
                     <main>
-                        
+                        <h1 id="day3"><a class="header" href="#day3">day3</a></h1>
+<p>根据题目显示，今天要做的题要进入包和模块了，那么先把前面的内容收收尾。</p>
+<h2 id="收尾工作"><a class="header" href="#收尾工作">收尾工作</a></h2>
+<h3 id="模式匹配"><a class="header" href="#模式匹配">模式匹配</a></h3>
+<p>match本身也是表达式，可以赋值</p>
+<pre><pre class="playground"><code class="language-rust">enum IpAddr {
+   Ipv4,
+   Ipv6
+}
+
+fn main() {
+    let ip1 = IpAddr::Ipv6;
+    let ip_str = match ip1 {
+        IpAddr::Ipv4 =&gt; &quot;127.0.0.1&quot;,
+        _ =&gt; &quot;::1&quot;,
+    };
+
+    println!(&quot;{}&quot;, ip_str);
+}</code></pre></pre>
+<p>然而，在某些场景下，我们其实只关心某一个值是否存在，此时 match 就显得过于啰嗦。</p>
+<h3 id="iflet"><a class="header" href="#iflet">iflet</a></h3>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>if let Some(3) = v {
+    println!(&quot;three&quot;);
+}
+<span class="boring">}</span></code></pre></pre>
+<p>Rust 标准库中提供了一个非常实用的宏：matches!，它可以将一个表达式跟模式进行匹配，然后返回匹配的结果 true or false。</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>let foo = 'f';
+assert!(matches!(foo, 'A'..='Z' | 'a'..='z'));
+
+let bar = Some(4);
+assert!(matches!(bar, Some(x) if x &gt; 2));
+<span class="boring">}</span></code></pre></pre>
+<h3 id="解构option"><a class="header" href="#解构option">解构option</a></h3>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>enum Option&lt;T&gt; {
+    Some(T),
+    None,
+}
+<span class="boring">}</span></code></pre></pre>
+<p>一个变量要么有值：Some(T), 要么为空：None。</p>
+<p>使用 Option<T>，是为了从 Some 中取出其内部的 T 值以及处理没有值的情况</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>fn plus_one(x: Option&lt;i32&gt;) -&gt; Option&lt;i32&gt; {
+    match x {
+        None =&gt; None,
+        Some(i) =&gt; Some(i + 1),
+    }
+}
+
+let five = Some(5);
+let six = plus_one(five);
+let none = plus_one(None);
+<span class="boring">}</span></code></pre></pre>
+<h3 id="绑定"><a class="header" href="#绑定">@绑定</a></h3>
+<p>@（读作 at）运算符允许为一个字段绑定另外一个变量。</p>
+<p>下面例子中，我们希望测试 Message::Hello 的 id 字段是否位于 3..=7 范围内，同时也希望能将其值绑定到 id_variable 变量中以便此分支中相关的代码可以使用它。我们可以将 id_variable 命名为 id，与字段同名，不过出于示例的目的这里选择了不同的名称。</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>enum Message {
+    Hello { id: i32 },
+}
+
+let msg = Message::Hello { id: 5 };
+
+match msg {
+    Message::Hello { id: id_variable @ 3..=7 } =&gt; {
+        println!(&quot;Found an id in range: {}&quot;, id_variable)
+    },
+    Message::Hello { id: 10..=12 } =&gt; {
+        println!(&quot;Found an id in another range&quot;)
+    },
+    Message::Hello { id } =&gt; {
+        println!(&quot;Found some other id: {}&quot;, id)
+    },
+}
+<span class="boring">}</span></code></pre></pre>
+<p>上例会打印出 Found an id in range: 5。通过在 3..=7 之前指定 id_variable @，我们捕获了任何匹配此范围的值并同时将该值绑定到变量 id_variable 上。</p>
+<h2 id="包和模块"><a class="header" href="#包和模块">包和模块</a></h2>
+<blockquote>
+<p>这一部分圣经和the book的翻译非常不一样，只能凑合看了</p>
+</blockquote>
+<ul>
+<li>
+<p>项目(Packages)：一个 Cargo 提供的 feature，可以用来构建、测试和分享包</p>
+</li>
+<li>
+<p>包(Crate)：一个由多个模块组成的树形结构，可以作为三方库进行分发，也可以生成可执行文件进行运行</p>
+</li>
+<li>
+<p>模块(Module)：可以一个文件多个模块，也可以一个文件一个模块，模块可以被认为是真实项目中的代码组织单元</p>
+</li>
+<li>
+<p>项目(Package)：可以用来构建、测试和分享包</p>
+</li>
+<li>
+<p>工作空间(WorkSpace)：对于大型项目，可以进一步将多个包联合在一起，组织成工作空间</p>
+</li>
+<li>
+<p>包(Crate)：一个由多个模块组成的树形结构，可以作为三方库进行分发，也可以生成可执行文件进行运行</p>
+</li>
+<li>
+<p>模块(Module)：可以一个文件多个模块，也可以一个文件一个模块，模块可以被认为是真实项目中的代码组织单元</p>
+</li>
+</ul>
+<h4 id="包和-crate"><a class="header" href="#包和-crate">包和 Crate</a></h4>
+<p>crate 是 Rust 在编译时最小的代码单位。如果你用 rustc 而不是 cargo 来编译一个文件（第一章我们这么做过），编译器还是会将那个文件认作一个 crate。crate 可以包含模块，模块可以定义在其他文件，然后和 crate 一起编译</p>
+<p>crate 有两种形式：二进制项和库。二进制项 可以被编译为可执行程序，比如一个命令行程序或者一个服务器。它们必须有一个 main 函数来定义当程序被执行的时候所需要做的事情。目前我们所创建的 crate 都是二进制项。</p>
+<p>库 并没有 main 函数，它们也不会编译为可执行程序，它们提供一些诸如函数之类的东西，使其他项目也能使用这些东西。</p>
+<p>包（package）是提供一系列功能的一个或者多个 crate。一个包会包含一个 Cargo.toml 文件，阐述如何去构建这些 crate。Cargo 就是一个包含构建你代码的二进制项的包。Cargo 也包含这些二进制项所依赖的库。其他项目也能用 Cargo 库来实现与 Cargo 命令行程序一样的逻辑。</p>
+<p>包中可以包含至多一个库 crate(library crate)。包中可以包含任意多个二进制 crate(binary crate)，但是必须至少包含一个 crate（无论是库的还是二进制的）。</p>
+<h4 id="module"><a class="header" href="#module">module</a></h4>
+<p>直接上图
+<img src="https://raw.githubusercontent.com/TephrocactusMYC/pictures/main/imgs/module.png" alt="" /></p>
+<pre><pre class="playground"><code class="language-rust">/*
+backyard
+├── Cargo.lock
+├── Cargo.toml
+└── src
+    ├── garden
+    │   └── vegetables.rs
+    ├── garden.rs
+    └── main.rs
+*/
+use crate::garden::vegetables::Asparagus;
+
+pub mod garden;
+
+fn main() {
+    let plant = Asparagus {};
+    println!(&quot;I'm growing {:?}!&quot;, plant);
+}
+</code></pre></pre>
+<p>接下来就是结构了，需要看教材即可</p>
+<h3 id="其他"><a class="header" href="#其他">其他</a></h3>
+<p>pub 是可见性
+&gt;模块可见性不代表模块内部项的可见性，模块的可见性仅仅是允许其它模块去引用它，但是想要引用它内部的项，还得继续将对应的项标记为 pub。</p>
+<p>super 代表的是父模块为开始的引用方式，非常类似于文件系统中的 .. 语法：../a/b 文件名：src/lib.rs</p>
+<p>self 其实就是引用自身模块中的项</p>
+<h4 id="结构体和枚举的可见性"><a class="header" href="#结构体和枚举的可见性">结构体和枚举的可见性</a></h4>
+<p>为何要把结构体和枚举的可见性单独拎出来讲呢？因为这两个家伙的成员字段拥有完全不同的可见性：</p>
+<p>将结构体设置为 pub，但它的所有字段依然是私有的
+将枚举设置为 pub，它的所有字段也将对外可见
+原因在于，枚举和结构体的使用方式不一样。如果枚举的成员对外不可见，那该枚举将一点用都没有，因此枚举成员的可见性自动跟枚举可见性保持一致，这样可以简化用户的使用。</p>
+<p>而结构体的应用场景比较复杂，其中的字段也往往部分在 A 处被使用，部分在 B 处被使用，因此无法确定成员的可见性，那索性就设置为全部不可见，将选择权交给程序员。</p>
+<h3 id="use"><a class="header" href="#use">use</a></h3>
+<p>在 Rust 中，可以使用 use 关键字把路径提前引入到当前作用域中，随后的调用就可以省略该路径，极大地简化了代码。</p>
+<h2 id="hashmap"><a class="header" href="#hashmap">hashmap</a></h2>
+<p>就是python里面的字典</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use std::collections::HashMap;
+
+// 创建一个HashMap，用于存储宝石种类和对应的数量
+let mut my_gems = HashMap::new();
+
+// 将宝石类型和对应的数量写入表中
+my_gems.insert(&quot;红宝石&quot;, 1);
+my_gems.insert(&quot;蓝宝石&quot;, 2);
+my_gems.insert(&quot;河边捡的误以为是宝石的破石头&quot;, 18);
+<span class="boring">}</span></code></pre></pre>
+<pre><pre class="playground"><code class="language-rust">fn main() {
+    use std::collections::HashMap;
+
+    let teams_list = vec![
+        (&quot;中国队&quot;.to_string(), 100),
+        (&quot;美国队&quot;.to_string(), 10),
+        (&quot;日本队&quot;.to_string(), 50),
+    ];
+
+    let teams_map: HashMap&lt;_,_&gt; = teams_list.into_iter().collect();
+
+    println!(&quot;{:?}&quot;,teams_map)
+}</code></pre></pre>
+<p>查询</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use std::collections::HashMap;
+
+let mut scores = HashMap::new();
+
+scores.insert(String::from(&quot;Blue&quot;), 10);
+scores.insert(String::from(&quot;Yellow&quot;), 50);
+
+let team_name = String::from(&quot;Blue&quot;);
+let score: Option&lt;&amp;i32&gt; = scores.get(&amp;team_name);
+<span class="boring">}</span></code></pre></pre>
+<p>更新</p>
+<pre><pre class="playground"><code class="language-rust">fn main() {
+    use std::collections::HashMap;
+
+    let mut scores = HashMap::new();
+
+    scores.insert(&quot;Blue&quot;, 10);
+
+    // 覆盖已有的值
+    let old = scores.insert(&quot;Blue&quot;, 20);
+    assert_eq!(old, Some(10));
+
+    // 查询新插入的值
+    let new = scores.get(&quot;Blue&quot;);
+    assert_eq!(new, Some(&amp;20));
+
+    // 查询Yellow对应的值，若不存在则插入新值
+    let v = scores.entry(&quot;Yellow&quot;).or_insert(5);
+    assert_eq!(*v, 5); // 不存在，插入5
+
+    // 查询Yellow对应的值，若不存在则插入新值
+    let v = scores.entry(&quot;Yellow&quot;).or_insert(50);
+    assert_eq!(*v, 5); // 已经存在，因此50没有插入
+}</code></pre></pre>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use std::collections::HashMap;
+
+let text = &quot;hello world wonderful world&quot;;
+
+let mut map = HashMap::new();
+// 根据空格来切分字符串(英文单词都是通过空格切分)
+for word in text.split_whitespace() {
+    let count = map.entry(word).or_insert(0);
+    *count += 1;
+}
+
+println!(&quot;{:?}&quot;, map);
+<span class="boring">}</span></code></pre></pre>
+<h2 id="做题"><a class="header" href="#做题">做题</a></h2>
+<p>今天停止到50题</p>
+
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
